--- a/src/main/frontend/src/app/components/tasks/tasks-list/tasks-list.component.html
+++ b/src/main/frontend/src/app/components/tasks/tasks-list/tasks-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  tasks-list works!
-</p>
+<ul class="list-group">
+	<li class="list-group-item">item </li>
+	<li class="list-group-item">item </li>
+	<li class="list-group-item">item </li>
+</ul>
