--- a/src/main/frontend/src/app/components/tasks/tasks-list/tasks-list.component.html
+++ b/src/main/frontend/src/app/components/tasks/tasks-list/tasks-list.component.html
@@ -1,5 +1,15 @@
 <ul class="list-group">
-	<li class="list-group-item">item </li>
-	<li class="list-group-item">item </li>
-	<li class="list-group-item">item </li>
+	<li  class="list-group-item"   *ngFor="let task of tasks">
+		<div class="task-checkbox">
+			<input type="checkbox" 
+				   class="list-child"
+				   (change)="onTaskChange($event,task)"	
+				   [checked]="task.completed"
+				   >
+			<span ngClass="{{task.completed ? 'name completed' :'name'}}">{{task.name}}</span>
+			<span class="label {{getDueDateLabel(task)}} pull-right">{{task.dueDate}}</span>
+		</div>
+	
+	 </li>
+
 </ul>
